--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,19 @@
     "xstring": "cpp",
     "xtr1common": "cpp",
     "xtree": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "filesystem": "cpp",
+    "any": "cpp",
+    "array": "cpp",
+    "chrono": "cpp",
+    "codecvt": "cpp",
+    "csignal": "cpp",
+    "forward_list": "cpp",
+    "iomanip": "cpp",
+    "numeric": "cpp",
+    "random": "cpp",
+    "ranges": "cpp",
+    "span": "cpp",
+    "valarray": "cpp"
   }
 }
